# GitFlare

./: .gitignore  CONTRIBUTING.md  README.md  RECORDED-CHANGES.md  SPEC.md  git-credential-gitflare  gitflare.toml  pyproject.toml  rn.md
.github/workflows/: release.yml
docs/: architecture.md  configuration.md  deployment.md  index.md  installation.md
gitflare/: __init__.py  admin.py  config.py  logging.py  main.py  models.py
gitflare.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gitflare/auth/: __init__.py  ssh.py  tokens.py
gitflare/git/: __init__.py  backend.py  hooks.py  repo.py  ssh_handler.py
gitflare/routes/: __init__.py  admin.py  git_http.py  ui.py
gitflare/static/: app.js  index.html  style.css
