[project]
name = "gitflare"
version = "0.3.0"
description = "Self-hosted Git repository hosting server"
authors = [{ name = "The Cinder Project" }]
license = { text = "GPLv3" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "bcrypt",
    "httpx",
    "keyring",
]

[project.scripts]
gitflare = "gitflare.main:run"
gitflare-admin = "gitflare.admin:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
